--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 WPF_watcher\bin
 WPF_watcher\obj
 WPF_watcher\obj\Debug
+.vs/WPF_Watcher/v16/.suo
+.vs/WPF_Watcher/v16/Server/sqlite3/storage.ide
+WPF_Watcher/bin/Debug/WPF_Watcher.exe
+WPF_Watcher/bin/Debug/WPF_Watcher.pdb
+WPF_Watcher/obj/Debug/WPF_Watcher.csproj.FileListAbsolute.txt
+WPF_Watcher/obj/Debug/WPF_Watcher.csprojAssemblyReference.cache
+WPF_Watcher/obj/Debug/WPF_Watcher.exe
+WPF_Watcher/obj/Debug/WPF_Watcher.pdb
+WPF_Watcher/obj/Debug/WPF_Watcher_MarkupCompile.cache
+WPF_Watcher/obj/Debug/WPF_Watcher_MarkupCompile.lref
