--- a/WPF_Watcher/WPF_Watcher.csproj
+++ b/WPF_Watcher/WPF_Watcher.csproj
@@ -98,5 +98,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Pict\1.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
